fix: cors configure setting